--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,4 @@
 *.class
-
-*.log
-
-*.ctxt
-
-.mtj.tmp/
-
-*.jar
-*.war
-*.ear
-
-hs_err_pid*
-
-bin/
-gen/
-out/
-target/
-
-.project
-.classpath
-.settings/
-
-.idea/
-*.iws
 *.iml
-*.ipr
-
-nbproject/private/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-
-.mvn/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-
-.gradle/
-build/
-
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
-*.bak
-
-patches/
+.idea/
+.idea/**
