--- a/homework-3/pom.xml
+++ b/homework-3/pom.xml
@@ -66,6 +66,22 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.15.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>6.1.12</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>6.1.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.19</version>
+    </dependency>
 
   </dependencies>
 
@@ -82,36 +98,34 @@
         </configuration>
       </plugin>
 
-      <!-- Liquibase Plugin -->
-      <plugin>
-        <groupId>org.liquibase</groupId>
-        <artifactId>liquibase-maven-plugin</artifactId>
-        <version>4.5.0</version>
-        <executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>update</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <changeLogFile>src/main/liquibase/changelog-master.xml</changeLogFile>
-          <url>jdbc:postgresql://localhost:5432/my_fintech_bank</url>
-          <username>${env.DB_USERNAME}</username>
-          <password>${env.DB_PASSWORD}</password>
-        </configuration>
-      </plugin>
+<!--      &lt;!&ndash; Liquibase Plugin &ndash;&gt;-->
+<!--      <plugin>-->
+<!--        <groupId>org.liquibase</groupId>-->
+<!--        <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--        <version>4.5.0</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>process-resources</phase>-->
+<!--            <goals>-->
+<!--              <goal>update</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--        <configuration>-->
+<!--          <changeLogFile>src/main/liquibase/changelog-master.xml</changeLogFile>-->
+<!--          <url>jdbc:postgresql://localhost:5432/my_fintech_bank</url>-->
+<!--          <username>${env.DB_USERNAME}</username>-->
+<!--          <password>${env.DB_PASSWORD}</password>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
 
     <resources>
       <resource>
-        <directory>src/main/liquibase</directory>
-      </resource>
-      <resource>
         <directory>src/main/resources</directory>
       </resource>
     </resources>
+
   </build>
 
 </project>
