--- a/homework-3/src/main/resources/application.properties
+++ b/homework-3/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/my_fintech_bank
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+connection.pool.size=10
 
 # Liquibase configuration
 liquibase.change-log=classpath:liquibase/changelog-master.xml
